syntax = "proto3";

package routemanager;
option go_package = "github.com/bilalcaliskan/split-the-tunnel/pkg/pb;routemanager";


// The gRPC service definition.
service RouteManager {
  rpc AddRoute (AddRouteRequest) returns (AddRouteResponse) {}
  rpc RemoveRoute (RemoveRouteRequest) returns (RemoveRouteResponse) {}
  rpc ListRoutes (ListRoutesRequest) returns (ListRoutesResponse) {}
}

message Error {
  StatusCode code = 1;
  string description = 2;
}

// Enum for business logic errors.
enum StatusCode {
  INVALID_DESTINATION = 0;
  ROUTE_NOT_FOUND = 1;
  ROUTE_ALREADY_EXISTS = 2;
  // Extend with more business errors as needed.
}

// Request and response messages.
message AddRouteRequest {
  string destination = 1;
}

message AddRouteResponse {
  oneof response {
    AddRoutePayload payload = 1;
    Error error = 2;
  }
}

message AddRoutePayload {
  bool success = 1;
  string message = 2;
}

message RemoveRouteRequest {
  string destination = 1;
}

message RemoveRouteResponse {
  oneof response {
    RemoveRoutePayload payload = 1;
    Error error = 2;
  }
}

message RemoveRoutePayload {
  bool success = 1;
  string message = 2;
}

message ListRoutesRequest {}

message ListRoutesResponse {
  oneof response {
    ListRoutesPayload payload = 1;
    Error error = 2;
  }
}

message ListRoutesPayload {
  repeated string routes = 1;
}
